5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1674_1105.log
== TEST (2019-04-25 11:06:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta)
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- ERROR:
File "XXXX", line 23
    elif (brasao == turta)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:06:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:07:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:11:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

lobo = 1


print("Entrada:", brasao)

if (brasao == 1):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    elif (brasao == leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:13:50) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

lobo = 1
leao = 2
veado = 3
dragao = 4
rosa = 5
sol = 6
lula = 7
esfolado = 8
turta = 9


print("Entrada:", brasao)

if (brasao == 1):
	print("Casa: Stark")
elif (brasao == 2):
	print("Casa: Lannister")
elif (brasao == 3):
	print("Casa: Baratheon")
elif (brasao == 4):
	print("Casa: Targaryen")
elif (brasao == 5):
	print("Casa: Tyrell")
elif (brasao == 6):
	print("Casa: Martell")
elif (brasao == 7):
	print("Casa: Greyjoy")
elif (brasao == 8):
	print("Casa: Bolton")
elif (brasao == 9):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- OUTPUT:
Entrada: lula
Brasao: invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:15:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:15:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:22:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:24:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == lobo):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (brasao == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == leao):
	print("Casa: Lannister")
elif (brasao == veado):
	print("Casa: Baratheon")
elif (brasao == dragao):
	print("Casa: Targaryen")
elif (brasao == rosa):
	print("Casa: Tyrell")
elif (brasao == sol):
	print("Casa: Martell")
elif (brasao == lula):
	print("Casa: Greyjoy")
elif (brasao == esfolado):
	print("Casa: Bolton")
elif (brasao == turta):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif (brasao == leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:27:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:27:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- EXECUTION TIME:
0.16862
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao: invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:27:25) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao: invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:32:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:32:23) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
brasao = input("descricao do brasao: ")

print("Entrada:", brasao)

if (brasao == "lobo"):
	print("Casa: Stark")
elif (brasao == "leao"):
	print("Casa: Lannister")
elif (brasao == "veado"):
	print("Casa: Baratheon")
elif (brasao == "dragao"):
	print("Casa: Targaryen")
elif (brasao == "rosa"):
	print("Casa: Tyrell")
elif (brasao == "sol"):
	print("Casa: Martell")
elif (brasao == "lula"):
	print("Casa: Greyjoy")
elif (brasao == "esfolado"):
	print("Casa: Bolton")
elif (brasao == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.189855
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
